# SiMDEL

./: .gitignore  README.md  README.ru.md  conda.yml  pyproject.toml
.github/workflows/: bump-version.yml  bump.yml  check.yml  delete-merged-branch-config.yml  deploy.yml  push-tag.yml  release.yml  tag.yml
documentation/: README.ru.md
examples/: CookBook.ipynb  FEP.ipynb  Funnel.ipynb
examples/data/CookBook/: lig.sdf
examples/data/CookBook/my.ff/: forcefield.doc
examples/data/Funnel/: pfkfb3_ligs_pair.sdf  pfkfb4_lig43.sdf
libs/pmx/: README.rst  setup.py
simdel/_misc/: context.py
simdel/_parsers/: gro_parser.py  index_parser.py
simdel/_wrappers/: openff.py
simdel/analyse/: energy.py  interactions.py  metadynamics.py
simdel/chem/: ff_map.py  forcefield.py  restraints.py  system.py  topology.py  views.py
simdel/func/: geometry_transform.py  parametrization.py  simulation.py
simdel/pipelines/: __init__.py
simdel/pipelines/defaults/: __init__.py  functions.py  mdps.py
simdel/pipelines/fep/: pipe_base.py
simdel/pipelines/metadynamics/: __init__.py  configs.py  core.py  pipe_simple.py  pipe_split.py
simdel/run/: __init__.py
simdel/sim/: __init__.py  core_mdp.py  external_force.py  interactions.py  others.py  plumed_mdp.py  qm.py  run.py  transtitions.py
src/simdel/: __init__.py  _deps.py  _log.py  _utils.py  traj.py  version.py
src/simdel/_ff_collection/: __init__.py
src/simdel/_ff_collection/GROMACSamber14sb_OL24.ff/: ffbonded.itp
src/simdel/_misc/: utils.py
src/simdel/_parsers/: top_parser.py
src/simdel/_wrappers/: gmx.py  gromacs.py  openff.py  plumed.py  pmx.py
src/simdel/analyse/: __init__.py  energy.py  geometry.py  metadynamics.py
src/simdel/chem/: __init__.py  ff_map.py  forcefield.py  geometry.py  info.py  metadynamics.py  restraints.py  system.py  topology.py  trajectory.py  views.py
src/simdel/func/: __init__.py  alchemy.py  converters.py  geometry_transform.py  parametrization.py  simulation.py  solvation.py  topology_transform.py
src/simdel/pipelines/: selections.py
src/simdel/pipelines/defaults/: forcefields.py
src/simdel/pipelines/fep/: __init__.py  configs.py  core.py  pipe_base.py
src/simdel/pipelines/metadynamics/: configs.py  core.py  pipe_simple.py  pipe_split.py
src/simdel/run/: pipelines.py  pools.py
src/simdel/sim/: constraints.py  core_mdp.py  coupling.py  external_force.py  interactions.py  others.py  plumed_mdp.py  qm.py  run.py  transtitions.py
